packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__scrollbar_positioning_scrolled_down.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                "
"       Test Tasks                                            Cache   Duration   "
"                                                                               ↑"
"  ·    app24:lint                                              ...        ...  ║"
"  ·    app25:test                                              ...        ...  ║"
"  ·    app26:build                                             ...        ...  ║"
"  ·    app27:lint                                              ...        ...  ║"
"  ·    app28:test                                              ...        ...  ║"
"  ·    app29:build                                             ...        ...  █"
"  ·    app2:build                                              ...        ...  █"
"  ·    app30:lint                                              ...        ...  █"
"  ·    app31:test                                              ...        ...  █"
"> ·    app32:build                                             ...        ...  ║"
"  ·    app33:lint                                              ...        ...  ║"
"  ·    app34:test                                              ...        ...  ║"
"  ·    app35:build                                             ...        ...  ║"
"  ·    app36:lint                                              ...        ...  ║"
"  ·    app37:test                                              ...        ...  ║"
"  ·    app38:build                                             ...        ...  ║"
"  ·    app39:lint                                              ...        ...  ↓"
