packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__scrollbar_positioning_short_terminal.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 4200
expression: terminal.backend()
---
"                                                                                "
" NX    Running Test Tasks with Scrollbar...                  Cache   Duration   "
"                                                                               ↑"
"                                                                               █"
"> ·    app10:test                                              ...        ...  █"
"  ·    app11:build                                             ...        ...  ║"
"  ·    app12:lint                                              ...        ...  ║"
"  ·    app13:test                                              ...        ...  ║"
"  ·    app14:build                                             ...        ...  ║"
"  ·    app15:lint                                              ...        ...  ║"
"  ·    app16:test                                              ...        ...  ║"
"  ·    app17:build                                             ...        ...  ↓"
