packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__scrollbar_positioning_tall_terminal.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                "
" NX    Test Tasks                                            Cache   Duration   "
"                                                                               ↑"
"                                                                               █"
"> ·    app10:test                                              ...        ...  █"
"  ·    app11:build                                             ...        ...  █"
"  ·    app12:lint                                              ...        ...  █"
"  ·    app13:test                                              ...        ...  █"
"  ·    app14:build                                             ...        ...  █"
"  ·    app15:lint                                              ...        ...  █"
"  ·    app16:test                                              ...        ...  █"
"  ·    app17:build                                             ...        ...  █"
"  ·    app18:lint                                              ...        ...  ║"
"  ·    app19:test                                              ...        ...  ║"
"  ·    app1:test                                               ...        ...  ║"
"  ·    app20:build                                             ...        ...  ║"
"  ·    app21:lint                                              ...        ...  ║"
"  ·    app22:test                                              ...        ...  ║"
"  ·    app23:build                                             ...        ...  ║"
"  ·    app24:lint                                              ...        ...  ║"
"  ·    app25:test                                              ...        ...  ║"
"  ·    app26:build                                             ...        ...  ║"
"  ·    app27:lint                                              ...        ...  ║"
"  ·    app28:test                                              ...        ...  ║"
"  ·    app29:build                                             ...        ...  ║"
"  ·    app2:build                                              ...        ...  ║"
"  ·    app30:lint                                              ...        ...  ║"
"  ·    app31:test                                              ...        ...  ║"
"  ·    app32:build                                             ...        ...  ║"
"                                                                               ↓"
