packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__scrolling_after_scroll.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Test Tasks                                                                                    Cache   Duration   "
" │                                                                                                                     ↑"
" │·    Waiting for task...                                                                                             █"
" └                                                                                                                     █"
"> ·    app10:test                                                                                      ...        ...  █"
"  ·    app11:test                                                                                      ...        ...  █"
"  ·    app12:test                                                                                      ...        ...  █"
"  ·    app1:test                                                                                       ...        ...  ║"
"  ·    app2:test                                                                                       ...        ...  ║"
"  ·    app3:test                                                                                       ...        ...  ║"
"  ·    app4:test                                                                                       ...        ...  ║"
"  ·    app5:test                                                                                       ...        ...  ║"
"  ·    app6:test                                                                                       ...        ...  ║"
"                                                                                                                       ↓"
