packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__scrolling_consistency_viewport2_long_names.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 3832
expression: terminal.backend()
---
"                                                                                "
" NX    Running Scrolling Test...                                Cache   Duration"
"                                                                                "
"                                                                                "
"> ·    app1:build                                                 ...        ..."
"  ·    app1:test                                                  ...        ..."
"  ·    this-is-a-very-long-project-name-that-affects-column-vi    ...        ..."
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
